--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
  
+body{
+  direction: rtl;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -78,4 +82,11 @@
     @apply bg-background text-foreground;
     font-feature-settings: "rlig" 1, "calt" 1;
   }
+}
+
+.grid-cols-24{
+  grid-template-columns: repeat(24, minmax(0, 1fr));
+}
+.col-span-15 {
+  grid-column: span 15 / span 15;
 }
